--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,7 @@
 <resources>
     <string name="app_name">Hyo Jung Lee 20172979</string>
-    <string name="to">To:</string>
-    <string name="to_hint">Enter email address</string>
-    <string name="message_hint">20172979+Hyo Jung Lee</string>
-    <string name="subject_hint">Subject</string>
-    <string name="send_text">Send</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="textview1">TextView_1</string>
+    <string name="textview2">TextView_2</string>
+    <string name="button1">SEND</string>
+    <string name="button2">REPLY</string>
 </resources>
